Add feature to specify the type of dependency plus resolve callbacks

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
     "name": "typescript-dependency-injection",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "Dependency Injection container for Typescript projects",
     "main": "lib/index.js",
     "types": "lib/index.d.ts",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "node ./lib/example/index.js"
     },
     "author": {
         "name": "Mihai Blebea",
