--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "target": "es6",
-        "lib": ["es2017"],
+        "lib": ["dom", "es2017"],
         "rootDir": "src",
         "outDir": "lib",
         "module": "commonjs",
