--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
         "noEmitOnError": true,
         "experimentalDecorators": true,
         "declaration": true,
-        "types": []
+        "types": ["node"]
     }
 }
