--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,25 @@
 {
     "compilerOptions": {
         "target": "es6",
-        "lib": ["dom", "es2017"],
+        "lib": ["es2017", "dom"],
         "rootDir": "src",
         "outDir": "lib",
         "module": "commonjs",
         "moduleResolution": "node",
-        "strict": true,
-        "noEmitOnError": true,
+        "resolveJsonModule": true,
+        "esModuleInterop": true,
+        "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
+        "noEmitOnError": true,
         "declaration": true,
-        "types": ["node"]
-    }
+        "strict": true,
+        "types": ["node"],
+        "baseUrl": ".",
+        "paths": {
+            "*": [ "node_modules/*" ]
+        }
+    },
+    "include": [
+        "src/**/*"
+    ]
 }
